Refactored and optimized imports, improved ordering in queries and test assertions. Enhanced code structure by adding `@Getter` annotations to improve maintainability.