@@ -60,7 +60,7 @@ public class UserController {
             @AuthenticationPrincipal UserPrincipal principal) {
         Pageable pageable = PageRequest.of(
                 Math.max(page, 0),
-                Math.min(Math.max(size, 1), MAX_PAGE_SIZE));
+                Math.clamp(size, 1, MAX_PAGE_SIZE));
         return userService.listUsers(pageable, principal,
                 SearchTerms.normalize(search), normalizeRole(role));
     }
