@@ -55,7 +55,7 @@ public class TerminalController {
             @AuthenticationPrincipal UserPrincipal principal) {
         Pageable pageable = PageRequest.of(
                 Math.max(page, 0),
-                Math.min(Math.max(size, 1), MAX_PAGE_SIZE));
+                Math.clamp(size, 1, MAX_PAGE_SIZE));
         return terminalService.listTerminals(pageable, principal, SearchTerms.normalize(search));
     }
 
